# pyflic-ble

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/pyflic_ble/: __init__.py  client.py  const.py
src/pyflic_ble/handlers/: base.py  duo.py  flic2.py  twist.py
tests/: test_rotate_tracker.py
