[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyflic-ble"
version = "0.1.1"
description = "Python library for Flic smart button BLE communication"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Shortcut Labs", email = "support@flic.io" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "bleak>=0.21.0",
    "bleak-retry-connector>=3.0.0",
    "cryptography>=41.0.0",
]

[project.urls]
Homepage = "https://github.com/50ButtonsEach/pyflic-ble"
Repository = "https://github.com/50ButtonsEach/pyflic-ble"

[tool.setuptools.packages.find]
where = ["src"]
